# customs-hs-classification

./: README.md
backend/: .gitignore  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  api.py  classifier.py  data.py
backend/customs_ai_assistant_backend.egg-info/: PKG-INFO  SOURCES.txt
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
