[tool.uv]
# This section defines project-specific settings for the uv tool
# We use requirements.txt to manage dependencies for simplicity.

[project]
name = "customs-ai-assistant-backend"
version = "0.1.0"
description = "Flask API for Customs HS Code Classification Assistant using OpenAI"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["flask", "openai", "ai", "customs"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"